force-app/main/default/objects/Family_Detail__c/Family_Detail__c.object-meta.xml
<CustomObject>
    <label>Family Detail</label>
    <nameField>
        <displayFormat>FD{0}</displayFormat>
        <label>Family Details Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Family Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>