force-app/main/default/objects/Family_Detail__c/fields/External_Family_Id__c.field-meta.xml
<CustomField>
    <fullName>External_Family_Id__c</fullName>
    <formula>IF(
 ISPICKVAL(Related_Contact__r.Account.Account_code__c, &#39;IK&#39;),
  (&#39;IK&#39;&amp;&#39;_&#39;&amp;TEXT(MONTH( DATEVALUE(Related_Contact__r.CreatedDate) ))&amp;&#39;_&#39;&amp;TEXT(YEAR( DATEVALUE(Related_Contact__r.CreatedDate) ))&amp;&#39;_&#39;&amp;Related_Contact__r.UUID__c&amp;&#39;_&#39;&amp;Name),  
  (&#39;GQ&#39;&amp;&#39;_&#39;&amp;TEXT(MONTH( DATEVALUE(Related_Contact__r.CreatedDate) ))&amp;&#39;_&#39;&amp;TEXT(YEAR( DATEVALUE(Related_Contact__r.CreatedDate) ))&amp;&#39;_&#39;&amp;Related_Contact__r.UUID__c&amp;&#39;_&#39;&amp;Name)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>External Family Id</label>
    <type>Text</type>
</CustomField>