force-app/main/default/objects/Family_Detail__c/fields/States_UT__c.field-meta.xml
<CustomField>
    <fullName>States_UT__c</fullName>
    <label>States / UT</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Country__c</controllingField>
        <restricted>true</restricted>
        <valueSetName>States_UT</valueSetName>
    </valueSet>
</CustomField>