force-app/main/default/objects/Family_Detail__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Relationship__c</columns>
    <columns>Name__c</columns>
    <columns>Related_Contact__c</columns>
    <columns>Primary_Contact_Number__c</columns>
    <columns>Gender__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>